# api/docs/swagger.yaml
@@ -38,6 +38,8 @@ definitions:
     properties:
       barcode:
         type: string
+      category_id:
+        type: string
       category_name:
         type: string
       coming_table_id:
@@ -59,6 +61,8 @@ definitions:
     type: object
   models.ComingTableResp:
     properties:
+      branch_id:
+        type: string
       branch_name:
         type: string
       coming_id:
@@ -141,6 +145,8 @@ definitions:
   models.ProductResp:
     properties:
       barcode:
+        type: string
+      category_id:
         type: string
       category_name:
         type: string
